--- a/src/payment.html
+++ b/src/payment.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Payment Successful</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <title>Checkout Page</title>
+    <link rel="stylesheet" href="../build/tailwind.css" />
   </head>
-  <body>
+  <body class="p-6">
     <!-- ========== Header CONTENT ========== -->
     <nav class="bg-[transparent] dark:bg-black dark:text-secondary">
       <div
@@ -149,38 +146,64 @@
         </div>
       </div>
     </nav>
-    <div
-      class="flex flex-col items-center justify-center min-h-screen py-2 w-full"
-      style="
-        background-image: url('./assets/order_back.png');
-        background-repeat: no-repeat;
-        background-position: center;
-      "
-    >
-      <!-- Success Message -->
-      <div class="p-6 text-center w-full max-w-lg">
-        <div class="mb-4 flex justify-center flex-col items-center">
-          <svg
-            width="86"
-            height="85"
-            viewBox="0 0 86 85"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M26.75 42.5L40.6786 54.1071L59.25 30.8929M43 75C38.732 75 34.5059 74.1594 30.5628 72.5261C26.6197 70.8928 23.0369 68.4989 20.019 65.481C17.0011 62.4631 14.6072 58.8803 12.9739 54.9372C11.3406 50.9941 10.5 46.768 10.5 42.5C10.5 38.232 11.3406 34.0059 12.9739 30.0628C14.6072 26.1197 17.0011 22.5369 20.019 19.519C23.0369 16.5011 26.6197 14.1072 30.5628 12.4739C34.5059 10.8406 38.732 10 43 10C51.6195 10 59.886 13.4241 65.981 19.519C72.0759 25.614 75.5 33.8805 75.5 42.5C75.5 51.1195 72.0759 59.386 65.981 65.481C59.886 71.5759 51.6195 75 43 75Z"
-              stroke="#4AB39A"
-              stroke-width="4"
-              stroke-linecap="round"
-            />
-          </svg>
 
-          <h2 class="mt-2 text-2xl font-semibold text-gray-700">
-            Payment Successful
-          </h2>
+    <div class="w-lg mx-auto bg-white p-6">
+      <h2 class="text-3xl font-bold mb-6">Checkout</h2>
+      <div class="grid md:grid-cols-2 grid-cols-1">
+        <!-- Payment Method Section -->
+        <div class="pr-6">
+          <h3 class="text-xl font-semibold mb-4">Payment Method</h3>
+          <form>
+            <div class="flex gap-2 items-center">
+              <div class="mb-4">
+                <input
+                  type="radio"
+                  id="visa"
+                  name="payment"
+                  class="mr-2"
+                  checked
+                />
+                <label for="visa" class="inline-flex items-center">
+                  <img
+                    src="https://img.icons8.com/color/48/000000/visa.png"
+                    alt="Visa"
+                    class="w-8 h-8 mr-2"
+                  />
+                  VISA
+                </label>
+              </div>
+              <div class="mb-4">
+                <input type="radio" id="paynow" name="payment" class="mr-2" />
+                <label for="paynow" class="inline-flex items-center">
+                  <img
+                    src="https://img.icons8.com/color/48/000000/pay-now.png"
+                    alt="PayNow"
+                    class="w-8 h-8 mr-2"
+                  />
+                  PAYNOW
+                </label>
+              </div>
+              <div class="mb-4">
+                <input
+                  type="radio"
+                  id="bank_transfer"
+                  name="payment"
+                  class="mr-2"
+                />
+                <label for="bank_transfer" class="inline-flex items-center">
+                  Bank Transfer
+                </label>
+              </div>
+            </div>
+            <button
+              type="submit"
+              class="block px-6 py-3 text-lg font-semibold text-white bg-primary rounded-md rounded-br-lg shadow hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+            >
+              Pay
+            </button>
+          </form>
         </div>
-
-        <!-- Order Summary -->
+        <!-- Order Summary Section -->
         <div
           class="p-10 shadow-md rounded-lg border-2 rounded-br-3xl"
           style="
@@ -193,25 +216,25 @@
         >
           <div class="flex justify-between items-end">
             <div>
-              <h3 class="text-5xl font-semibold text-gray-800">Order</h3>
+              <h3 class="text-5xl font-semibold text-secondary">Order</h3>
             </div>
-            <p class="text-lg text-gray-600 mt-1">3 Items</p>
+            <p class="text-lg text-secondary mt-1">3 Items</p>
           </div>
           <hr class="my-8" />
-          <div class="mt-2 flex justify-between text-sm text-gray-600">
+          <div class="mt-2 flex justify-between text-sm text-secondary">
             <span class="text-lg">Subtotal</span>
             <span class="text-lg">SG$146</span>
           </div>
-          <div class="flex justify-between text-sm text-gray-600">
+          <div class="flex justify-between text-sm text-secondary">
             <span class="text-lg">GST</span>
             <span class="text-lg">SG$3.18</span>
           </div>
-          <div class="flex justify-between text-sm text-gray-600">
+          <div class="flex justify-between text-sm text-secondary">
             <span class="text-lg">Discount</span>
             <span class="text-lg">- SG$0</span>
           </div>
           <div
-            class="mt-4 flex justify-between text-lg font-semibold text-gray-800"
+            class="mt-4 flex justify-between text-lg font-semibold text-secondary"
           >
             <span class="text-xl">Total</span>
             <span class="text-3xl">SG$149.18</span>
